[package]
name = "bitcoin_explorer_part1"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
config = "0.14.0"

