[package]
name = "bitcoin_explorer_part1"
version = "0.1.0"
edition = "2021"


[dependencies]
mysql = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
config = "0.14.0"
serde_derive = "1.0"
env_logger = "0.9"  # 或最新版本
actix-web = "4"
actix = "0.13"
futures-util = "0.3.30"  # 用于处理异步流
